Bug 387579 - "crash while doing nothing... [@ nsMsgCompose::OnSendNotPerformed]" [p=ivo@func.nl (Ivo van Dongen) r+sr=bienvenu]